Add new article form

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,6 @@
     Aplicación administrativa para manejar los artículos y tiendas de manera fácil y rápida.
   </h2>
 
-  <%= link_to "Crear Artículo", "#", class: "btn btn-large btn-primary" %>
+  <%= link_to "Crear Artículo", new_article_path, class: "btn btn-large btn-primary" %>
   <%= link_to "Crear Tienda", "#", class: "btn btn-large btn-primary" %>
 </div>
