--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Inicio", root_path %></li>
-          <li><%= link_to "Nueva Tienda",    "#" %></li>
-          <li><%= link_to "Nuevo Artículo",    "#" %></li>
+          <li><%= link_to "Nueva Tienda", new_article_path %></li>
+          <li><%= link_to "Nuevo Artículo", new_store_path %></li>
         </ul>
       </nav>
     </div>
