--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <a>Super Zapatos</a>
-    por Satcha Villafuerte
+    by Satcha Villafuerte
   </small>
   <nav>
   </nav>
