--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
       <%= link_to "Super Zapatos", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Inicio", root_path %></li>
-          <li><%= link_to "Nueva Tienda", new_article_path %></li>
-          <li><%= link_to "Nuevo Artículo", new_store_path %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "New Store", new_store_path %></li>
+          <li><%= link_to "New Article", new_article_path %></li>
         </ul>
       </nav>
     </div>
