--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="center hero-unit">
-  <h1>Bienvenido a Super Zapatos</h1>
+  <h1>Welcome to Super Zapatos</h1>
 
   <h2>
-    Aplicación administrativa para manejar los artículos y tiendas de manera fácil y rápida.
+  	Admin application to manage articles and stores in a better, easy and faster way.
   </h2>
 
-  <%= link_to "Crear Tienda", new_store_path, class: "btn btn-large btn-primary" %>
-  <%= link_to "Crear Artículo", new_article_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Create Store", new_store_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Create Article", new_article_path, class: "btn btn-large btn-primary" %>
 </div>
