--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,18 +1,18 @@
-<% provide(:title, 'Tienda') %>
-<h1>Nueva Tienda</h1>
+<% provide(:title, 'Store') %>
+<h1>New Store</h1>
 
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@store) do |f| %>
 
-      <!%= render 'shared/error_messages' %>
-      <%= f.label "Nombre" %>
+      <%= render 'shared/store_error_messages' %>
+      <%= f.label :name %>
       <%= f.text_field :name %>
 
-      <%= f.label "Dirección" %>
+      <%= f.label :address %>
       <%= f.text_field :address %>
 
-      <%= f.submit "Crear Tienda", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Create Store", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
